rosbuild_add_library(roscpp_introspection introspection.cpp types.cpp)
target_link_libraries(roscpp_introspection dl)
rosbuild_link_boost(roscpp_introspection filesystem)

option(BUILD_TEST "If true, some introspection libraries for std_msgs and a small test executable is built." OFF)
if(BUILD_TEST)
  include(${PROJECT_SOURCE_DIR}/cmake/roscpp_introspection.cmake)
  introspection_add(std_msgs)
  introspection_add(geometry_msgs)
  rosbuild_add_executable(roscpp_introspection_test test.cpp)
  target_link_libraries(roscpp_introspection_test roscpp_introspection)
endif(BUILD_TEST)
